navbar style using css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timmy Portfolio</title>
@@ -11,18 +12,18 @@
     <header>
         <nav>
             <div>
-                <a href="">Timothy</a>
+                <a  class="name">Timothy</a>
             </div>
 
             <div>
-                <a href="">Home</a>
-                <a href="">About me</a>
-                <a href="">Project</a>
-                <a href="">Contact</a>
+                <a class="links">Home</a>
+                <a class="links">About me</a>
+                <a class="links">Project</a>
+                <a class="links">Contact</a>
             </div>
 
             <div>
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars icons"></i>
             </div>
         </nav>
 
